--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
-    "mongoose": "^5.12.7"
+    "mongoose": "^5.12.7",
+    "socket.io": "^4.0.1"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
